syntax = "proto3";
package sequencer;

option go_package = "github.com/nathanieltornow/PMLog/pedigree/pedigreepb";

service Node {
  rpc Register(NodeInfo) returns (RegisterResponse);
  rpc Heartbeat(Empty) returns (stream StructureUpdate);
}

message RegisterResponse {
  uint32 nodeID = 1;
  StructureUpdate structure = 2;
}

message StructureUpdate {
  uint32 epoch = 1;
  repeated NodeInfo peers = 2;
  repeated NodeInfo adopters = 3;
}

message NodeInfo {
  uint32 ID = 1;
  string IP = 2;
}

message Empty{}
